* SVN *

* Bye bye PageNavigation block.

  Change this:

    {% pagenavigation %}
      <li>{{ page.link }}</li>
    {% endpagenavigation %}
  
  to:

    {% for page in pages %}
    <li>{{ page | link_to_page }}</li>
    {% endfor %}

* Enhance the site host validations so it requires a valid domain name.

* Add basic asset support [Justin, Rick]

* fix user fixtures [Cristi Balan]

* Add windows binary file support to acts as attachment [Cristi Balan]

* escape HTML entered for comment author/url fields [Cristi Balan]

* add category tags to the atom feed [Cristi Balan]

* Port the ReferencedPageCaching controller to the Mephisto admin interface [DeLynn Berry]

* Add extra site and search vars [Rick]

  {{ site.articles_per_page }}

  {{ search_string }}
  {{ search_count }}

* Identify current section in Liquid [Rick]

  {{ site.current_section }}
  
  {% for section in site.sections %}
    {% if section.current %}
    {% endif %}
  {% endfor %}

* Fix issue where Articles don't allow comments with comment_age = 0 [Rick]