@@ -3,4 +3,12 @@ class Content < ActiveRecord::Base
   validates_presence_of :body
   belongs_to :user, :with_deleted => true
   belongs_to :site
+
+  def filters=(filters)
+    write_attribute :filter, (filters.blank? ? nil : filters.first.to_s)
+  end
+
+  def filters
+    filter.blank? ? [] : [filter.to_sym]
+  end
 end
